2A/05_Projet_GL/src/test/deca/context/valid/complet/88_method_call_sans_id.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 22/01/2024

class A {
    void get() {

    }

    void debut() {
        get();
    }
}