2A/05_Projet_GL/src/test/deca/context/invalid/complet/84_param_dans_asm.deca
// Description :
//  test du methodAsm Body 
// Resultats :
//    ligne 11 : identiﬁcateur de type non déclaré
// Historique : 
//  cree le 18/01/2024

class A {

    void get(B b ) asm (
        "bonjour"
    );
}